[tool.poetry]
name = "python-project-lvl1"
version = "0.1.0"
description = ""
authors = ["exproot <nonenull11@icloud.com>"]
packages = [
  { include = "brain_games" },
]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
